added new xml files and local.properties to .gitignore

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,11 +77,12 @@
             android:id="@+id/btnGuest"
             android:layout_width="265dp"
             android:layout_height="41dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="60dp"
             android:layout_marginStart="60dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="60dp"
-            android:layout_marginBottom="16dp"
             android:background="@drawable/rounded_corner"
+            android:onClick="signInAsGuest"
             android:text="SIGN IN AS GUEST"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -94,10 +95,11 @@
             android:id="@+id/btnSign"
             android:layout_width="265dp"
             android:layout_height="39dp"
+            android:layout_marginEnd="60dp"
             android:layout_marginStart="60dp"
             android:layout_marginTop="28dp"
-            android:layout_marginEnd="60dp"
             android:background="@drawable/rounded_corner"
+            android:onClick="signInAsUser"
             android:text="SIGN IN"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
