--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
             app:layout_constraintTop_toBottomOf="@+id/etUser" />
 
         <Button
-            android:id="@+id/btnGuest"
+            android:id="@+id/btnRegister"
             android:layout_width="265dp"
             android:layout_height="41dp"
             android:layout_marginBottom="16dp"
@@ -83,7 +83,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/rounded_corner"
             android:onClick="signInAsGuest"
-            android:text="SIGN IN AS GUEST"
+            android:text="REGISTER"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
