added new xmls and classes
XMLs for register, code sample list (users), code sample view, code sample row (for recycler view entry)
Classes for Register, Guest, User

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/tvLogo"
         android:layout_width="340dp"
         android:layout_height="72dp"
+        android:layout_marginEnd="164dp"
         android:layout_marginStart="162dp"
         android:layout_marginTop="52dp"
-        android:layout_marginEnd="164dp"
-        android:text="Code Tutor"
+        android:text="@string/app_name"
         android:textAlignment="center"
         android:textSize="56sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,11 +38,11 @@
             android:id="@+id/etUser"
             android:layout_width="265dp"
             android:layout_height="39dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_corner"
-            android:hint="Username"
+            android:hint="@string/username"
             android:paddingLeft="16dip"
             android:singleLine="true"
             android:textColor="#282727"
@@ -57,12 +57,12 @@
             android:id="@+id/tvPassword"
             android:layout_width="265dp"
             android:layout_height="39dp"
+            android:layout_marginEnd="77dp"
             android:layout_marginStart="77dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="77dp"
             android:background="@drawable/rounded_corner"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:paddingLeft="16dip"
             android:textColor="#282727"
@@ -82,8 +82,8 @@
             android:layout_marginStart="60dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/rounded_corner"
-            android:onClick="signInAsGuest"
-            android:text="REGISTER"
+            android:onClick="triggerRegister"
+            android:text="@string/register"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -100,7 +100,7 @@
             android:layout_marginTop="28dp"
             android:background="@drawable/rounded_corner"
             android:onClick="signInAsUser"
-            android:text="SIGN IN"
+            android:text="@string/signin"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
