--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_corner"
-            android:hint="@string/username"
+            android:hint="@string/email"
             android:paddingLeft="16dip"
             android:singleLine="true"
             android:textColor="#282727"
