--- a/app/src/main/res/layout/code_sample_row.xml
+++ b/app/src/main/res/layout/code_sample_row.xml
@@ -7,46 +7,34 @@
 
     <ImageView
         android:id="@+id/logo_icon"
-        android:layout_width="121dp"
-        android:layout_height="114dp"
+        android:layout_width="83dp"
+        android:layout_height="78dp"
         android:layout_marginEnd="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/titleView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/ic_action_name" />
 
     <TextView
         android:id="@+id/titleView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="5dp"
         android:text="Title"
-        app:layout_constraintBottom_toTopOf="@+id/posterView"
+        app:layout_constraintBottom_toTopOf="@+id/ownerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/logo_icon"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/lastEditedView"
-        android:layout_width="0dp"
-        android:layout_height="23dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
-        android:text="Last modified: "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/logo_icon"
-        app:layout_constraintTop_toBottomOf="@+id/posterView" />
-
-    <TextView
-        android:id="@+id/posterView"
+        android:id="@+id/ownerView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:text="Posted by: "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/logo_icon"
@@ -54,13 +42,19 @@
 
     <TextView
         android:id="@+id/codeTypeView"
-        android:layout_width="0dp"
-        android:layout_height="16dp"
-        android:layout_marginEnd="112dp"
+        android:layout_width="207dp"
+        android:layout_height="17dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
         android:text="Code Type: "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/logo_icon"
-        app:layout_constraintTop_toBottomOf="@+id/lastEditedView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/logo_icon" />
+
+    <TextView
+        android:id="@+id/idView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
