--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item" />
+    <item
+        android:id="@+id/user_codesamples"
+        android:title="My Code Samples" />
+    <item
+        android:id="@+id/user_logout"
+        android:title="Log Out" />
 </menu>
