--- a/app/src/main/res/layout/add_code_sample.xml
+++ b/app/src/main/res/layout/add_code_sample.xml
@@ -62,18 +62,20 @@
     <EditText
         android:id="@+id/contentText"
         android:layout_width="0dp"
-        android:layout_height="376dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="5dp"
+        android:layout_height="358dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="9dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_corner"
         android:ems="10"
+        android:gravity="top|left"
         android:hint="@string/content"
         android:inputType="textMultiLine"
         android:paddingLeft="5dip"
+        android:paddingBottom="0dip"
         android:textColor="#282727"
-        android:textSize="14sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/btnAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,12 +84,13 @@
     <Button
         android:id="@+id/btnAdd"
         android:layout_width="132dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/rounded_corner"
         android:onClick="addCode"
         android:text="ADD"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.936"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contentText" />
 
