--- a/app/src/main/res/layout/code_sample_row.xml
+++ b/app/src/main/res/layout/code_sample_row.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:background="#fff8f8"
+    >
 
     <ImageView
         android:id="@+id/logo_icon"
@@ -45,8 +48,11 @@
         android:layout_width="207dp"
         android:layout_height="17dp"
         android:layout_marginStart="10dp"
+        android:layout_marginBottom="12dp"
         android:text="Code Type: "
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/logo_icon" />
 
     <TextView
