--- a/app/src/main/res/layout/code_sample_row.xml
+++ b/app/src/main/res/layout/code_sample_row.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:background="#fff8f8"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/row_corner"
     >
 
     <ImageView
