--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
             android:layout_marginEnd="60dp"
             android:layout_marginStart="60dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/rounded_corner"
+            android:background="@drawable/form_button"
             android:onClick="triggerRegister"
             android:text="@string/register"
             android:textAlignment="center"
@@ -98,7 +98,7 @@
             android:layout_marginEnd="60dp"
             android:layout_marginStart="60dp"
             android:layout_marginTop="28dp"
-            android:background="@drawable/rounded_corner"
+            android:background="@drawable/form_button"
             android:onClick="signInAsUser"
             android:text="@string/signin"
             android:textAlignment="center"
