--- a/app/src/main/res/layout/register_screen.xml
+++ b/app/src/main/res/layout/register_screen.xml
@@ -72,16 +72,16 @@
 
     <Button
         android:id="@+id/btnRegister"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="81dp"
+        android:layout_width="163dp"
+        android:layout_height="52dp"
         android:layout_marginStart="91dp"
-        android:layout_marginTop="47dp"
-        android:background="@drawable/rounded_corner"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="81dp"
+        android:background="@drawable/form_button"
         android:onClick="register"
         android:text="@string/register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.408"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
